@@ -8,6 +8,7 @@ serd (1.0.1) unstable;
   * Add option for writing terse output without newlines
   * Add support for validation
   * Add support for writing terse collections
+  * Add support for xsd:float and xsd:double literals
   * Bring read/write interface closer to C standard
   * Make nodes opaque
   * Make serd_strtod API const-correct
